add new overdispersion lecture.

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -104,7 +104,7 @@ __Etherpad:__ https://etherpad.wikimedia.org/p/609-glm-2024
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
-__Lecture:__ [Overdispersed Models](./lectures/12_overdisp.html), [Zero Inflated Models](./lectures/13_zinfl.html)   
+__Lecture:__ [Overdispersed Models](./lectures/overdisp.html), [Zero Inflated Models](./lectures/13_zinfl.html)   
 __Reading:__ McElreath Chapter 12     
 __Further Reading:__ [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Roset et al 2006 on Overdispersion](http://byrneslab.net/classes/biol609/Rose_et_al_2006_zero_inflation.pdf), [Zuur chapter on zero inflation](http://byrneslab.net/classes/biol609/zuur_zero_inflation.pdf)
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-zig_zag-2024    
